k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: universidade
  labels:
    app: universidade-aws
