k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universidade-app
  namespace: universidade
  labels:
    app: universidade-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: universidade-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: universidade-app
    spec:
      containers:
        - name: universidade-app
          # Imagem local: build com "eval $(minikube docker-env) && docker build -t universidade-app:latest ."
          image: universidade-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
