k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: universidade-service
  namespace: universidade
spec:
  selector:
    app: universidade-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP

# NodePort expõe a porta 30080 em cada node do cluster.
# Acesso local: http://$(minikube ip):30080
# Atalho: minikube service universidade-service -n universidade
